[package]
name = "datafusion_group_by"
version = "0.1.0"
authors = ["Josh Taylor <joshuataylorx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { path = "/home/josh/dev/arrow/rust/arrow", version = "2.0.0-SNAPSHOT", features = ["prettyprint"] }
parquet = { path = "/home/josh/dev/arrow/rust/parquet", version = "2.0.0-SNAPSHOT", features = ["arrow"] }
datafusion = { path = "/home/josh/dev/arrow/rust/datafusion" }
tokio = { version = "0.2", features = ["full"] }
serde_derive = "1.0"
serde = "1.0.116"